--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -5,8 +5,8 @@
 {{- $sections := $.Site.GetPage "/sections" }}
 <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
  <div class="container-fluid">
-  <a  href="{{$baseURL}}#page-top"><img class="navbar-brand"/></a>
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+  <a  href="{{$baseURL}}#page-top" class="w-25"><img class="navbar-brand"/></a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
     Menu
     <i class="fas fa-bars"></i>
   </button>
