--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,18 +1,17 @@
     <!-- Footer -->
     <footer class="footer bg-black small text-center text-white-50">
       <div class="container px-4 px-lg-5">
-        <p>Copyright &copy; {{ $.Params.copyright }} </p>
+        <p>
+          <a class="manage-consent" href="#manage-consent">Manage consent</a>
+          - 
+          Copyright &copy; {{ $.Params.copyright }} </p>
       </div>
     </footer>
 
-    <!-- Bootstrap core JavaScript
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     
     <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
     <!-- Custom scripts for this template -->
     {{ $scriptMain := resources.Get "js/scripts.js" }}
