--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,10 @@
 <meta name="author" content="{{ $author }}">
 
 <title>{{- $.Param "title" -}}</title>
-<link rel="icon" href="/favicon.ico">
+{{ $favicon := resources.Get "img/favicon.ico"}}
+{{ with $favicon }}
+<link rel="icon" href="{{ .RelPermalink }}">
+{{ end }}
 
 <meta name="robots" content="index,follow">
 <meta name="referrer" content="origin-when-cross-origin">
