--- a/assets/scss/sections/_masthead.scss
+++ b/assets/scss/sections/_masthead.scss
@@ -8,7 +8,7 @@
     width: 100%;
     height: auto;
     min-height: 100vh;
-    padding: 10rem;
+    padding: 10rem 2rem;
     background: linear-gradient(to bottom,
         #{fade-out($black, 0.1)} 0%,
         #{fade-out($black, 0.3)} 45%,
@@ -39,6 +39,11 @@
         color: fade-out($white, 0.35);
     };
 
+    .deadlines {
+        font-size: 1.6rem;
+        color: $white;
+    }
+    
     .sponsors {
         p {
             font-size: 1.5rem;
