Various layout and performance improvements
- fixed spacing between navbar
- made image round
- preprocess images to webp format and size
- purgecss

--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -51,7 +51,7 @@
         }
     }
 
-
+    /* purgecss ignore */
     @include media-breakpoint-up(xs) {
         padding-top: 0;
         padding-bottom: 0;
