--- a/assets/scss/sections/_masthead.scss
+++ b/assets/scss/sections/_masthead.scss
@@ -8,7 +8,7 @@
     width: 100%;
     height: auto;
     min-height: 100vh;
-    padding: 10rem 2rem;
+    padding: 4rem 2rem;
     background: linear-gradient(to bottom,
         #{fade-out($black, 0.1)} 0%,
         #{fade-out($black, 0.3)} 45%,
@@ -55,7 +55,12 @@
         }
     }
 
+    @include media-breakpoint-up(sm) {
+        padding: 7rem 2rem;
+    }
+
     @include media-breakpoint-up(lg) {
+        padding: 10rem 2rem;
         h1 {
             font-size: 4rem;
         }
