--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,10 +8,10 @@
       </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
     <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.2/js/all.min.js" crossorigin="anonymous"></script>
 
     <!-- Custom scripts for this template -->
     {{ $scriptMain := resources.Get "js/scripts.js" }}
@@ -19,4 +19,4 @@
     <!-- 
     <script src="{{ $js.Permalink }}" integrity="{{ $js.Data.Integrity }}" crossorigin="anonymous"></script>
     -->
-    <script src="{{ $scriptMain.Permalink }}" integrity="{{ $scriptMain.Data.Integrity }}" crossorigin="anonymous"></script>
+    <script defer src="{{ $scriptMain.Permalink }}" integrity="{{ $scriptMain.Data.Integrity }}" crossorigin="anonymous"></script>
