--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,15 +15,13 @@
 <meta name="referrer" content="origin-when-cross-origin">
 {{ hugo.Generator }}
 
-<!-- Bootstrap CSS-->
+<!-- Bootstrap CSS
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-<!-- Font Awesome icons (free version)-->
-<script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+-->
 
 <!-- Google fonts-->
-<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet" />
 
 {{ $logo := resources.Get "logo/DaMon_logo.png"}}
 {{ $logoSmall := resources.Get "logo/DaMon_logo_no_text.png"}}
@@ -33,11 +31,16 @@
 {{ if .Site.Params.logo.small }}
   {{ $logoSmall = resources.Get .Site.Params.logo.small }}
 {{ end }}
+{{ $logo = $logo.Process "webp" }}
+{{ $logo = $logo.Resize "300x" }}
+{{ $logoSmall = $logoSmall.Process "webp" }}
+{{ $logoSmall = $logoSmall.Resize "300x" }}
 
 {{ $titleImage := resources.Get "img/bg-masthead.jpg"}}
 {{ if .Site.Params.banner.image }}
   {{ $titleImage = resources.Get .Site.Params.banner.image }}
 {{ end }}
+{{ $titleImage = $titleImage.Process "webp" }}
 
 {{ $v := dict 
   "headerimage" $titleImage.RelPermalink
@@ -45,6 +48,6 @@
   "logoSmall" $logoSmall.RelPermalink
 }}
 {{ $opts := dict "transpiler" "dartsass" "targetPath" "css/style.css" "vars" $v }}
-{{ with resources.Get "scss/main.scss" | toCSS $opts | minify | fingerprint }}
+{{ with resources.Get "scss/main.scss" | toCSS $opts | postCSS | minify | fingerprint }}
   <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
 {{ end }}
