--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,10 +15,6 @@
 <meta name="referrer" content="origin-when-cross-origin">
 {{ hugo.Generator }}
 
-<!-- Bootstrap CSS
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
--->
-
 <!-- Google fonts-->
 <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet" />
@@ -48,6 +44,6 @@
   "logoSmall" $logoSmall.RelPermalink
 }}
 {{ $opts := dict "transpiler" "dartsass" "targetPath" "css/style.css" "vars" $v }}
-{{ with resources.Get "scss/main.scss" | toCSS $opts | postCSS | minify | fingerprint }}
+{{ with resources.Get "scss/main.scss" | toCSS $opts | postCSS | minify | fingerprint | resources.PostProcess }}
   <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
 {{ end }}
