Add timeline, theme (navbar) and color improvement

--- a/assets/scss/variables/_colors.scss
+++ b/assets/scss/variables/_colors.scss
@@ -33,11 +33,12 @@ $yellow: #e4c662;
 $green: #67c29c;
 $cyan: #1cabc4;
 $blue: #1c3694;
+$brown: #e1ba7b;
 
 // State colors
 
 $primary: $damon-blue;
-$secondary: $damon-yellow;
+$secondary: $brown;
 $success: $green;
 $info: $damon-blue;
 $warning: $yellow;
