--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -41,6 +41,7 @@
                 background-color: transparent;
             }
         }
+
     }
 
     @include media-breakpoint-down(lg) {
@@ -48,6 +49,7 @@
             display: inline-block;
             border: 0px;
             border-radius: 0px;
+            background-color: transparent;
         }
     }
 
@@ -56,14 +58,17 @@
         padding-top: 0;
         padding-bottom: 0;
         border-bottom: none;
-        background-color: transparent;
-        transition: background-color 0.3s ease-in-out;
+        background-color: $brown;
+
+        .navbar-collapse.collapse.show {
+            background-color: $brown;
+        };
 
         .navbar-toggler {
             font-size: 80%;
             padding: 0.75rem;
-            color: fade-out($white, 0.25);
-            border: $border-width solid fade-out($white, 0.25);
+            color: fade-out($black, 0.25);
+            border: $border-width solid fade-out($black, 0.25);
 
             &:focus {
                 outline: none;
@@ -81,20 +86,20 @@
 
         .nav-link {
             transition: none;
-            padding: 2rem 1rem;
-            color: fade-out($white, 0.25);
+            padding: 1.5rem 1rem 1.25rem 1rem;
+            color: fade-out($black, 0.25);
 
             &:hover {
                 color: fade-out($white, 0.1);
             }
 
             &:active {
-                color: $white;
+                color: $black;
             }
         }
 
         &.navbar-shrink {
-            background-color: $white;
+            background: $white;
 
             .navbar-toggler {
                 color: $primary;
@@ -108,6 +113,10 @@
                 max-width: 300px;
                 height: auto;
             }
+
+            .navbar-collapse.collapse.show {
+                background-color: $white;
+            };
 
             .nav-link {
                 color: $black;
