--- a/assets/scss/sections/_masthead.scss
+++ b/assets/scss/sections/_masthead.scss
@@ -10,9 +10,9 @@
     min-height: 100vh;
     padding: 4rem 2rem;
     background: linear-gradient(to bottom,
-        #{fade-out($black, 0.1)} 0%,
-        #{fade-out($black, 0.3)} 45%,
-        $black 100%),
+        #{fade-out($brown, 0.0)} 10%,
+        #{fade-out($brown, 0.2)} 40%,
+        #{fade-out($brown, 0.9)} 100%),
         url(h.$headerimage);
     background-position: center;
     background-repeat: no-repeat;
@@ -21,7 +21,7 @@
 
     h1 {
         font-family: $font-family-special;
-        color: $secondary;
+        color: $primary;
         font-weight: bold;
     }
 
@@ -31,17 +31,17 @@
     }
 
     h3 {
-        color: $white;
+        color: $black;
         text-align: left;
     }
 
     a {
-        color: fade-out($white, 0.35);
+        color: fade-out($black, 0.25);
     };
 
     .deadlines {
         font-size: 1.6rem;
-        color: $white;
+        color: $black;
     }
     
     .sponsors {
