--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -18,15 +18,8 @@
     </li>
    {{- end }}{{ end }}
 
-   {{- if isset $.Params "menu" -}}
-    {{- range $menuitem := $.Params.menu -}}
-    <li class="nav-item">
-     <a class="nav-link" href="{{ $menuitem.url | safeHTML }}">{{- default $menuitem.url $menuitem.name | safeHTML -}}</a>
-    </li>
-    {{- end -}}
-   {{- end -}}
    {{- $pages := $.Site.GetPage "/pages" }}
-   {{- if gt (len $pages.Pages) 0 -}}
+   {{- if or (gt (len $pages.Pages) 0) (isset $.Params "menu") -}}
    <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
         More
@@ -39,6 +32,12 @@
             </a>
         </li>
             {{- end -}}
+        {{- end -}}
+        {{- range $menuitem := $.Params.menu -}}
+        <li><a class="dropdown-item" href="{{ $menuitem.url | safeHTML }}">
+                {{- default $menuitem.url $menuitem.name | safeHTML -}}
+            </a>
+        </li>
         {{- end -}}
     </ul>
     </li>
