--- a/layouts/index.html
+++ b/layouts/index.html
@@ -41,7 +41,7 @@
             <img class="img-fluid" src="{{ $img.RelPermalink }}"  alt="SAP Logo">
             {{ end }}
         </div>
-        <div class="text-center mt-auto">
+        <div class="scroll-btn text-center mt-auto">
             <a href="#sec-ind-0" class="btn btn-circle btn-primary js-scroll-trigger"
                 aria-label="Scroll to Next Section"><i class="fa fa-angle-double-down animated"></i></a>
         </div>
