--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,10 @@
     <!-- Footer -->
-    <footer class="footer bg-black small text-center text-white-50">
+    <footer class="footer small text-center text-white">
       <div class="container px-4 px-lg-5">
+        <p>
+          <a class="inline-block px-2" href="https://twitter.com/DaMoN_workshop">
+            <i class="fa-brands fa-x-twitter fa-2xl"></i></a>
+          </p>
         <p>
           <a class="manage-consent" href="#manage-consent">Manage consent</a>
           - 
