--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,10 +6,14 @@
 <meta name="author" content="{{ $author }}">
 
 <title>{{- $.Param "title" -}}</title>
-{{ $favicon := resources.Get "img/favicon.ico"}}
-{{ with $favicon }}
-<link rel="icon" href="{{ .RelPermalink }}">
-{{ end }}
+{{ $baseURL := .Site.BaseURL }}
+<link rel="apple-touch-icon" sizes="180x180" href="{{$baseURL}}apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{$baseURL}}favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{$baseURL}}favicon-16x16.png">
+<link rel="manifest" href="{{$baseURL}}site.webmanifest">
+<link rel="mask-icon" href="{{$baseURL}}safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 
 <meta name="robots" content="index,follow">
 <meta name="referrer" content="origin-when-cross-origin">
