changing in colors

--- a/assets/scss/variables/_colors.scss
+++ b/assets/scss/variables/_colors.scss
@@ -9,6 +9,7 @@ $damon-blue: #334d7d;
 $damon-red: #c04a29;
 $damon-brown: #896a4d;
 $damon-yellow: #f6d39d;
+$damon-beige: #fbebd2;
 
 // Grayscale
 
