--- a/assets/scss/sections/_damon-dark.scss
+++ b/assets/scss/sections/_damon-dark.scss
@@ -6,10 +6,7 @@
     padding-top: 4rem;
     padding-bottom: 2rem;
     font-size: 120%;
-    background: linear-gradient(to bottom,
-        #{fade-out($black, 0.1)} 0%,
-        #{fade-out($black, 0.2)} 75%,
-        #{fade-out($black, 0.3)} 100%);
+    background: $primary;
 
     h1 {
         color: $white;
