--- a/assets/scss/sections/_masthead.scss
+++ b/assets/scss/sections/_masthead.scss
@@ -11,8 +11,8 @@
     padding: 4rem 2rem;
     background: linear-gradient(to bottom,
         #{fade-out($brown, 0.0)} 10%,
-        #{fade-out($brown, 0.2)} 40%,
-        #{fade-out($brown, 0.9)} 100%),
+        #{fade-out($brown, 0.2)} 50%,
+        #{fade-out($damon-beige, 0.3)} 70%),
         url(h.$headerimage);
     background-position: center;
     background-repeat: no-repeat;
