Add shortcode for horizontal card

--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -2,6 +2,12 @@
 // Cards
 // 
 
+.card {
+    background: transparent;
+    border: 0;
+    margin: 0.5rem;
+}
+
 .img-card {
     margin: 0.5rem;
     padding: 0rem;
