steering committee emails

--- a/assets/scss/sections/_masthead.scss
+++ b/assets/scss/sections/_masthead.scss
@@ -52,8 +52,9 @@
     
     .sponsors {
         p {
-            font-size: 1.5rem;
+            font-size: 1.6rem;
             color: $white;
+            font-weight: bold;
         }
         img {
             min-width: 300px;
