--- a/layouts/partials/masthead.html
+++ b/layouts/partials/masthead.html
@@ -34,7 +34,7 @@
         </div>
         {{ end }}
         <div class="sponsors py-4 text-center">
-            <p>Sponsors:</p> 
+            <p>SPONSORS</p> 
             {{ range .Site.Params.banner.sponsors }}
             {{ $img := resources.Get . }}
             {{ $img = $img.Process "webp" }}
