--- a/layouts/shortcodes/sc_img_card.html
+++ b/layouts/shortcodes/sc_img_card.html
@@ -1,9 +1,10 @@
-<div class="card img-card bg-transparent border-0">
+<div class="card img-card bg-transparent border-0 text-center" style="width: 20rem;">
     {{ $cardImage :=  .Get "img" | resources.Get }}
     {{ $cardImage = $cardImage.Process "webp" }}
     {{ $cardImage = $cardImage.Fill "512x512 Smart" }}
         <a href="{{ .Get "link" }}">
-    <img src="{{ $cardImage.RelPermalink }}" class="card-img-top img-fluid rounded-circle" alt="Potrait of {{ .Get "title" }}" loading="lazy">
+    <img src="{{ $cardImage.RelPermalink }}" class="card-img-top img-fluid rounded-circle" alt="Potrait of {{ .Get "title" }}" 
+    loading="lazy" style="padding-inline: 15%;">
         </a>
     <div class="card-body">
             <h4>{{ .Get "title" }}</h4>
