--- a/layouts/partials/masthead.html
+++ b/layouts/partials/masthead.html
@@ -36,9 +36,9 @@
         <div class="sponsors py-4 text-center">
             <p>SPONSORS</p> 
             {{ range .Site.Params.banner.sponsors }}
-            {{ $img := resources.Get . }}
+            {{ $img := resources.Get (index . "file") }}
             {{ $img = $img.Process "webp" }}
-            <img class="img-fluid" src="{{ $img.RelPermalink }}"  alt="SAP Logo">
+            <img class="img-fluid" src="{{ $img.RelPermalink }}"  alt="{{ index . "name" }} logo" style="{{ index . "style" }}">
             {{ end }}
         </div>
         <div class="scroll-btn text-center mt-auto">
