--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -5,7 +5,7 @@
 {{- $sections := $.Site.GetPage "/sections" }}
 <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
  <div class="container-fluid">
-  <a  href="{{$baseURL}}#page-top" class="navbar-brand-container"><img class="navbar-brand"/></a>
+  <a  href="{{$baseURL}}#page-top" class="navbar-brand-container"><img class="navbar-brand" width="350" height="120"/></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
     Menu
     <i class="fas fa-bars"></i>
