--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,6 +9,7 @@
           <a class="manage-consent" href="#manage-consent">Manage consent</a>
           - 
           Copyright &copy; {{ $.Params.copyright }} </p>
+          <p>Designed by Asma Awad & <a href="https://www.informatik.tu-darmstadt.de/systems/systems_tuda/group/team_detail_18496.en.jsp" style="color: white;">Muhammad El-Hindi</a></p>
       </div>
     </footer>
 
